--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,9 @@ before_script:
     - composer install
     - git clone -b develop https://github.com/Orange-Management/Build.git
     - chmod -R 755 Build/Hooks
+    - cd ..
+    - git clone -b develop https://github.com/Orange-Management/phpOMS.git
+    - cd Modules
 script:
     - vendor/bin/phpunit --version && vendor/bin/phpunit --configuration tests/phpunit_no_coverage.xml
     - ./Build/Hooks/travis.sh
