travis test continues

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,10 +14,10 @@ before_script:
     - cd ..
     - git clone -b develop https://github.com/Orange-Management/phpOMS.git
     - cd Modules
-    - echo "extension=redis.so" | tee /.phpenv/versions/$(phpenv version-name)/etc/conf.d/redis.ini
+    - echo "extension=redis.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/redis.ini
     - phpenmod redis
     - pecl install memcached
-    - echo "extension=memcached.so" | tee /.phpenv/versions/$(phpenv version-name)/etc/conf.d/memcached.ini
+    - echo "extension=memcached.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/memcached.ini
     - phpenmod memcached
 script:
     - vendor/bin/phpunit --version && vendor/bin/phpunit --configuration tests/phpunit_no_coverage.xml
