--- a/.travis.yml
+++ b/.travis.yml
@@ -14,12 +14,8 @@ before_script:
     - cd ..
     - git clone -b develop https://github.com/Orange-Management/phpOMS.git
     - cd Modules
+    - apt-get install -qq --no-install-recommends libmemcached-dev
     - printf "\n" | pecl install memcached
-addons:
-    addons:
-        apt:
-            packages:
-                - libmemcached-dev
 script:
     - vendor/bin/phpunit --version && vendor/bin/phpunit --configuration tests/phpunit_no_coverage.xml
     - ./Build/Hooks/travis.sh
