--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ services:
     - mysql
     - redis
     - memcached
+before_install:
+    - apt-get update
+    - apt-get install -qq libmemcached-dev
 before_script:
     - pecl install ast
     - composer install
@@ -14,7 +17,6 @@ before_script:
     - cd ..
     - git clone -b develop https://github.com/Orange-Management/phpOMS.git
     - cd Modules
-    - apt-get install -qq --no-install-recommends libmemcached-dev
     - printf "\n" | pecl install memcached
 script:
     - vendor/bin/phpunit --version && vendor/bin/phpunit --configuration tests/phpunit_no_coverage.xml
