--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,7 @@ on: [push]
 jobs:
   autoformat:
     runs-on: ubuntu-latest
+    if: "!contains(github.event.head_commit.message, 'NO_CI')"
     strategy:
       fail-fast: false
       max-parallel: 3
@@ -39,6 +40,7 @@ jobs:
           git push
   codestyle-tests:
     runs-on: ubuntu-latest
+    if: "!contains(github.event.head_commit.message, 'NO_CI')"
     strategy:
       fail-fast: false
       max-parallel: 3
@@ -77,6 +79,7 @@ jobs:
       run: vendor/bin/phpcs ./ --standard="Build/Config/phpcs.xml" -s --report=full
   custom:
     runs-on: ubuntu-latest
+    if: "!contains(github.event.head_commit.message, 'NO_CI')"
     strategy:
       fail-fast: false
       max-parallel: 3
